[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stir-shaken-toolkit"
dynamic = ["version"]
description = "Reusable ACME and STIR/SHAKEN certificate issuance toolkit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "argcomplete>=3",
  "cryptography>=41",
  "PyJWT>=2.8",
  "PyYAML>=6.0",
  "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/peeringhub-io/stir-shaken-toolkit"
Repository = "https://github.com/peeringhub-io/stir-shaken-toolkit"
Issues = "https://github.com/peeringhub-io/stir-shaken-toolkit/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
    "basedpyright",
]

[project.scripts]
stir-shaken-toolkit = "stir_shaken_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "stir_shaken_toolkit.version.__version__"}
